--- a/src/app/components/admin/manage-users/manage-users.component.html
+++ b/src/app/components/admin/manage-users/manage-users.component.html
@@ -30,7 +30,7 @@
           <th>{{ "user.email" | translate }}</th>
           <th>{{ "user.phone" | translate }}</th>
           <th>{{ "user.role" | translate }}</th>
-          <th>{{ "shared.action.key-name" | translate }}</th>
+          <th>{{ "shared.actions" | translate }}</th>
         </tr>
       </thead>
       <tbody>
