--- a/src/app/components/admin/reservations/reservations.component.html
+++ b/src/app/components/admin/reservations/reservations.component.html
@@ -19,7 +19,7 @@
           <th>{{ "room.type" | translate }}</th>
           <th>{{ "room.floor" | translate }}</th>
           <th>{{ "shared.form.price" | translate }}</th>
-          <th>{{ "shared.action.key-name" | translate }}</th>
+          <th>{{ "shared.actions" | translate }}</th>
         </tr>
       </thead>
       <tbody>
@@ -42,7 +42,7 @@
                 class="bi bi-info-circle-fill h5"
                 [title]="'reservation.reservation-details' | translate"
               ></i>
-              <!-- {{ "shared.action.details" | translate }} -->
+              <!-- {{ "shared.button.details" | translate }} -->
             </button>
             <button
               class="approve"
@@ -53,7 +53,7 @@
                 class="bi bi-check-circle-fill h5"
                 [title]="'reservation.approve-reservation' | translate"
               ></i>
-              <!-- {{ "shared.action.approve" | translate }} -->
+              <!-- {{ "shared.button.approve" | translate }} -->
             </button>
             <button
               class="reject"
@@ -64,7 +64,7 @@
                 class="bi bi-x-circle-fill h5"
                 [title]="'reservation.reject-reservation' | translate"
               ></i>
-              <!-- {{ "shared.action.reject" | translate }} -->
+              <!-- {{ "shared.button.reject" | translate }} -->
             </button>
           </td>
         </tr>
@@ -89,7 +89,7 @@
           <th>{{ "room.type" | translate }}</th>
           <th>{{ "room.floor" | translate }}</th>
           <th>{{ "shared.form.price" | translate }}</th>
-          <th>{{ "shared.action.key-name" | translate }}</th>
+          <th>{{ "shared.actions" | translate }}</th>
         </tr>
       </thead>
       <tbody>
@@ -112,7 +112,7 @@
                 class="bi bi-info-circle-fill h5"
                 [title]="'reservation.reservation-details' | translate"
               ></i>
-              <!-- {{ "shared.action.details" | translate }} -->
+              <!-- {{ "shared.button.details" | translate }} -->
             </button>
           </td>
         </tr>
