--- a/src/app/components/admin/user-details/user-details.component.html
+++ b/src/app/components/admin/user-details/user-details.component.html
@@ -86,7 +86,7 @@
           <th>{{ "room.type" | translate }}</th>
           <th>{{ "room.floor" | translate }}</th>
           <th>{{ "shared.form.price" | translate }}</th>
-          <th>{{ "shared.action.key-name" | translate }}</th>
+          <th>{{ "shared.actions" | translate }}</th>
         </tr>
       </thead>
       <tbody>
@@ -119,13 +119,13 @@
     class="mt-5 go-back-button btn-outline-primary rounded-2"
     [routerLink]="['/admin/manage-users']"
     routerLinkActive="router-link-active"
-    [title]="'shared.action.go-back' | translate"
+    [title]="'shared.button.go-back' | translate"
   >
     @if(lang == 'ar') {
     <i class="fa-solid fa-arrow-right"></i>
     } @else {
     <i class="fa-solid fa-arrow-left"></i>
     }
-    {{ "shared.action.go-back" | translate }}
+    {{ "shared.button.go-back" | translate }}
   </button>
 </div>
