--- a/src/app/components/employee/requests/requests.component.html
+++ b/src/app/components/employee/requests/requests.component.html
@@ -37,7 +37,7 @@
           </th>
           <th>{{ "service.title" | translate }}</th>
           <th>{{ "room.floor" | translate }}</th>
-          <th>{{ "shared.action.key-name" | translate }}</th>
+          <th>{{ "shared.actions" | translate }}</th>
         </tr>
       </thead>
       <tbody>
@@ -89,7 +89,7 @@
           </th>
           <th>{{ "service.title" | translate }}</th>
           <th>{{ "room.floor" | translate }}</th>
-          <th>{{ "shared.action.key-name" | translate }}</th>
+          <th>{{ "shared.actions" | translate }}</th>
         </tr>
       </thead>
       <tbody>
