--- a/src/app/components/shared/not-found/not-found.component.html
+++ b/src/app/components/shared/not-found/not-found.component.html
@@ -8,6 +8,6 @@
     [routerLink]="['/']"
     routerLinkActive="router-link-active"
   >
-    {{ "shared.go-back-to-home-page" | translate }}
+    {{ "shared.button.go-back-to-home-page" | translate }}
   </button>
 </div>
