--- a/src/app/components/shared/room-details/room-details.component.html
+++ b/src/app/components/shared/room-details/room-details.component.html
@@ -141,14 +141,14 @@
     class="mt-4 ms-4 me-4 p-2 btn-outline-primary rounded-2"
     [routerLink]="['/rooms/']"
     routerLinkActive="router-link-active"
-    [title]="'shared.action.go-back' | translate"
+    [title]="'shared.button.go-back' | translate"
   >
     @if(lang == 'ar') {
     <i class="fa-solid fa-arrow-right"></i>
     } @else {
     <i class="fa-solid fa-arrow-left"></i>
     }
-    {{ "shared.action.go-back" | translate }}
+    {{ "shared.button.go-back" | translate }}
   </button>
 </div>
 
