--- a/src/app/components/shared/auth/sign-up/sign-up.component.html
+++ b/src/app/components/shared/auth/sign-up/sign-up.component.html
@@ -10,73 +10,83 @@
 </ngb-toast>
 
 <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-  <h2>Sign Up</h2>
+  <h2>{{ "title.signup.name" | translate }}</h2>
   <div>
-    <label>{{ "profile.name" | translate }}:</label>
-    <input formControlName="name" type="text" />
+    <label>{{ "shared.form.name" | translate }}</label>
+    <input
+      formControlName="name"
+      type="text"
+      pattern="^[\u0600-\u06FFa-zA-Z'\s]+$"
+    />
     <div *ngIf="f['name'].invalid && f['name'].touched">
       <small *ngIf="f['name'].errors?.['required']">{{
         "shared.form.name-required" | translate
       }}</small>
       <small *ngIf="f['name'].errors?.['minlength']">{{
-        "shared.form.name-too-long" | translate
+        "shared.form.name-minlength" | translate
       }}</small>
+      <small *ngIf="f['name'].errors?.['maxLength']">{{
+        "shared.form.name-maxlength" | translate
+      }}</small>
+      <div *ngIf="f['name'].errors?.['pattern']">
+        {{ "shared.form.name-invalid" | translate }}
+      </div>
     </div>
   </div>
 
   <div>
-    <label> {{ "profile.email" | translate }} :</label>
+    <label> {{ "shared.form.email" | translate }}</label>
     <input formControlName="email" type="email" />
     <div *ngIf="f['email'].invalid && f['email'].touched">
       <small *ngIf="f['email'].errors?.['required']">
-        {{ "profile.email-required" | translate }}
+        {{ "shared.form.email-required" | translate }}
       </small>
       <small *ngIf="f['email'].errors?.['pattern']">
-        {{ "profile.email-invalid-pattern" | translate }}
+        {{ "shared.form.email-invalid" | translate }}
       </small>
     </div>
   </div>
 
   <div>
-    <label>{{ "profile.new-password" | translate }}:</label>
+    <label>{{ "shared.form.new-password" | translate }}</label>
     <input formControlName="password" type="password" />
     <div *ngIf="f['password'].invalid && f['password'].touched">
       <small *ngIf="f['password'].errors?.['required']">
-        {{ "profile.password-required" | translate }}
+        {{ "shared.form.password-required" | translate }}
       </small>
       <small *ngIf="f['password'].errors?.['pattern']">
-        {{ "profile.password-pattern" | translate }}
+        {{ "shared.form.password-pattern" | translate }}
       </small>
     </div>
   </div>
 
   <div>
-    <label>{{ "profile.confirm-password" | translate }}:</label>
+    <label>{{ "shared.form.confirm-password" | translate }}</label>
     <input formControlName="confirmPassword" type="password" />
     <div
       *ngIf="(f['confirmPassword'].touched || submitted) &&
          (f['confirmPassword'].errors || signUpForm.errors?.['mismatch'])"
     >
       <small *ngIf="f['confirmPassword'].errors?.['required']">
-        {{ "profile.confirmation-required" | translate }}.
+        {{ "shared.form.confirmation-required" | translate }}.
       </small>
       <small
         *ngIf="!f['confirmPassword'].errors && signUpForm.errors?.['mismatch']"
       >
-        {{ "profile.password-match" | translate }}
+        {{ "shared.form.password-match" | translate }}
       </small>
     </div>
   </div>
 
   <div class="d-flex justify-content-center">
     <button class="btn-primary" type="submit">
-      {{ "header.auth.signup" | translate }}
+      {{ "shared.button.signup" | translate }}
     </button>
   </div>
   <p style="text-align: center; margin-top: 1rem">
-    {{ "already-have-an-account" | translate }}
+    {{ "signup.already-have-an-account" | translate }}
     <a routerLink="/login" style="font-weight: bold; display: inline-block"
-      >{{ "header.auth.login" | translate }}!</a
+      >{{ "shared.button.login" | translate }}!</a
     >
   </p>
 </form>
