--- a/src/app/components/admin/dashboard/dashboard.component.html
+++ b/src/app/components/admin/dashboard/dashboard.component.html
@@ -3,11 +3,27 @@
     <div class="dashboard-container">
       <div class="child-container">
         <section class="stats-section">
-          <h2 class="mb-4">{{ "dashboard.system-overview" | translate }}</h2>
+          <h2 class="mb-4 pb-2">
+            {{ "dashboard.system-overview" | translate }}
+          </h2>
           <div class="stats-grid">
             <div>
-              <strong>{{ "dashboard.total-users" | translate }}:</strong>
-              {{ totalUsers }}
+              <strong>{{ "dashboard.total-employees" | translate }}:</strong>
+              {{ totalEmployees }}
+            </div>
+            <div>
+              <strong>{{ "dashboard.total-services" | translate }}:</strong>
+              {{ totalServices }}
+            </div>
+            <div>
+              <strong
+                >{{ "dashboard.total-services-requests" | translate }}:</strong
+              >
+              {{ totalServicesRequests }}
+            </div>
+            <div>
+              <strong>{{ "dashboard.total-customers" | translate }}:</strong>
+              {{ totalCustomers }}
             </div>
             <div>
               <strong>{{ "dashboard.total-rooms" | translate }}:</strong>
@@ -17,15 +33,11 @@
               <strong>{{ "dashboard.total-reservations" | translate }}:</strong>
               {{ totalReservations }}
             </div>
-            <div>
-              <strong>{{ "dashboard.total-services" | translate }}:</strong>
-              {{ totalServices }}
-            </div>
           </div>
         </section>
         <hr />
         <section class="stats-section">
-          <h2 class="mb-4">
+          <h2 class="mb-4 pb-2">
             {{ "dashboard.performance-metrics" | translate }}
           </h2>
           <div class="stats-grid">
@@ -35,40 +47,42 @@
                   "dashboard.avg-services-per-employee" | translate
                 }}:</strong
               >
+              {{ avgServicesPerEmployee }}
             </div>
             <div>
               <strong
                 >{{ "dashboard.avg-reservations-per-day" | translate }}:</strong
               >
+              {{ avgReservationsPerDay }}
             </div>
             <div>
               <strong
-                >{{ "dashboard.avg-services-per-day" | translate }}:</strong
+                >{{ "dashboard.avg-requests-per-day" | translate }}:</strong
               >
-            </div>
-            <div>
-              <strong>{{ "dashboard.cancellation-rate" | translate }}:</strong>
+              {{ avgRequestsPerDay }}
             </div>
           </div>
         </section>
         <hr />
         <section class="stats-section">
-          <h2 class="mb-4">{{ "dashboard.highlights" | translate }}</h2>
+          <h2 class="mb-4 pb-2">{{ "dashboard.highlights" | translate }}</h2>
           <div class="stats-grid">
             <div>
               <strong
                 >{{ "dashboard.employee-of-the-month" | translate }}:</strong
               >
+              {{ employeeOfTheMonth }}
             </div>
             <div>
               <strong
                 >{{ "dashboard.top-selling-service" | translate }}:</strong
               >
+              {{ getTopSellingService }}
             </div>
             <div>
               <strong
-                >{{ "dashboard.most-booked-room-type" | translate }}:</strong
-              >
+                >{{ "dashboard.most-booked-room-type" | translate }}: </strong
+              >{{ mostBookedRoomType }}
             </div>
           </div>
         </section>
@@ -93,17 +107,17 @@
         <div
           class="w-100 d-flex justify-content-center align-items-center flex-column"
         >
-          <h2>{{ "dashboard.services-status" | translate }}</h2>
-          <canvas class="w-50 h-75" id="servicesStatusChart"></canvas>
+          <h2>{{ "dashboard.requests-status" | translate }}</h2>
+          <canvas class="w-50 h-75" id="requestsStatusChart"></canvas>
         </div>
       </div>
     </div>
 
     <div class="child-container">
-      <h2>{{ "dashboard.services" | translate }}</h2>
+      <h2>{{ "dashboard.requests" | translate }}</h2>
       <div class="d-flex justify-content-between">
-        <canvas class="w-50 h-25" id="dailyServicesChart"></canvas>
-        <canvas class="w-50 h-25" id="weeklyServicesChart"></canvas>
+        <canvas class="w-50 h-25" id="dailyRequestsChart"></canvas>
+        <canvas class="w-50 h-25" id="weeklyRequestsChart"></canvas>
       </div>
     </div>
   </div>
