--- a/src/app/components/admin/reservations/reservations.component.html
+++ b/src/app/components/admin/reservations/reservations.component.html
@@ -134,7 +134,7 @@
       type="button"
       pButton
       icon="pi pi-times"
-      label="Reject"
+      [label]="'shared.confirm-dialog.reject' | translate"
       [ngStyle]="{ backgroundColor: '#e09fa6', border: 'red' }"
       (click)="cd.onAccept()"
     ></button>
@@ -143,7 +143,7 @@
       type="button"
       pButton
       icon="pi pi-check"
-      label="Cancel"
+      [label]="'shared.confirm-dialog.cancel' | translate"
       [ngStyle]="{ backgroundColor: '#90c67c', border: 'green' }"
       (click)="cd.onReject()"
     ></button>
