Format Code And Remove Unused Imports

--- a/src/app/components/customer/available-services/available-services.component.html
+++ b/src/app/components/customer/available-services/available-services.component.html
@@ -8,7 +8,6 @@
   {{ toastMessage }}
 </ngb-toast>
 
-
 <div
   class="services-container"
   *ngIf="filteredServices.length > 0; else noServices"
@@ -25,16 +24,24 @@
       <p><strong>Phone:</strong> {{ service.employee.phone }}</p>
     </div>
 
-<button class="btn-primary"
-  [disabled]="requestedServicesStatus[service.title] === 'Pending' || requestedServicesStatus[service.title] === 'In Progress' || requestedServicesStatus[service.title] === 'Completed'"
-  (click)="requestService(service)">
-  {{ 
-    requestedServicesStatus[service.title] === 'Completed' || requestedServicesStatus[service.title] === 'In Progress' 
-    ? 'Approved' 
-    : (requestedServicesStatus[service.title] === 'Pending' ? 'Requested' : 'Request Service') 
-  }}
-</button>
-
+    <button
+      class="btn-primary"
+      [disabled]="
+        requestedServicesStatus[service.title] === 'Pending' ||
+        requestedServicesStatus[service.title] === 'In Progress' ||
+        requestedServicesStatus[service.title] === 'Completed'
+      "
+      (click)="requestService(service)"
+    >
+      {{
+        requestedServicesStatus[service.title] === "Completed" ||
+        requestedServicesStatus[service.title] === "In Progress"
+          ? "Approved"
+          : requestedServicesStatus[service.title] === "Pending"
+          ? "Requested"
+          : "Request Service"
+      }}
+    </button>
   </div>
 </div>
 
