--- a/src/app/components/employee/services/services.component.html
+++ b/src/app/components/employee/services/services.component.html
@@ -61,11 +61,10 @@
       </div>
     </div>
   </div>
-  }
-  @if(services.length <= 0 ){
-    <h3 class="text-center mt-5">
-  {{ "service.there-are-no-services" | translate }}
-</h3>
+  } @if(services.length <= 0 ){
+  <h3 class="text-center mt-5">
+    {{ "service.there-are-no-services" | translate }}
+  </h3>
   }
 </div>
 
