--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,8 +6,9 @@ $color-brown: #8a704a;
 $color-dark-brown: #725529;
 
 $color-light-green: #abf7b1;
-$color-light-red: #faa0a0;
+$color-dark-red: #d33030;
 $color-red: #e74c4c;
+$color-light-red: #faa0a0;
 
 $background-color: $color-cream;
 $border-color: $color-tan;
