--- a/src/app/components/admin/user-details/user-details.component.html
+++ b/src/app/components/admin/user-details/user-details.component.html
@@ -46,9 +46,16 @@
           }
         </p>
       </div>
+      @if(user?.role == "Employee"){
+      <div class="d-flex justify-content-start w-50">
+        <button class="btn-danger mt-0" (click)="fireEmployee(user!)">
+          {{ "shared.button.fire" | translate }}
+        </button>
+      </div>
+      }
     </div>
   </div>
-  @if(user?.role == "Employee"){ @if(services.length>0){
+  @if(user?.role == "Employee"){ @if(services && services.length>0){
   <h1 class="m-4 mb-4">{{ "service.services" | translate }}</h1>
 
   <div class="rounded-4 shadow border overflow-hidden">
@@ -75,7 +82,8 @@
   </div>
   } @else{
   <h3 class="text-center mt-5">Does Not Have Any Service Yet</h3>
-  } } @else if(user?.role == "Customer"){ @if( reservations.length>0){
+  } } @else if(user?.role == "Customer"){ @if(reservations &&
+  reservations.length>0){
   <h1 class="m-4 mb-4">{{ "reservation.reservations" | translate }}</h1>
   <div class="rounded-4 shadow border overflow-hidden">
     <table class="table table-striped table-bordered mb-0">
@@ -129,3 +137,26 @@
     {{ "shared.button.go-back" | translate }}
   </button>
 </div>
+
+<p-toast />
+<p-confirmdialog #cd>
+  <ng-template pTemplate="footer">
+    <button
+      type="button"
+      pButton
+      icon="pi pi-times"
+      [label]="'shared.confirm-dialog.fire' | translate"
+      [ngStyle]="{ backgroundColor: '#e09fa6', border: 'red' }"
+      (click)="cd.onAccept()"
+    ></button>
+
+    <button
+      type="button"
+      pButton
+      icon="pi pi-check"
+      [label]="'shared.confirm-dialog.cancel' | translate"
+      [ngStyle]="{ backgroundColor: '#90c67c', border: 'green' }"
+      (click)="cd.onReject()"
+    ></button>
+  </ng-template>
+</p-confirmdialog>
